# mr-mpi-som

./: .gitignore  CMakeLists.txt  COPYING  HISTORY  LICENSE.GPLv3.html  README  build_som_pak.sh  mrsom.ini
data/: 01.txt  10-3.txt  100-10.txt  1000-100-00.txt  data.txt  data2.txt  gen_rand_matrix.py  gen_rand_matrix2.py  gen_randmat.py  getline.py  getoffsets.py  gmon.out  master-1000-100.txt  master-30-3.txt  master.txt  master2.txt  mrsom9_plotting.py  orig_rgb.txt  orig_rgb.txt.map  orig_rgb.txt.map.eps  orig_rgb_2000.txt  orig_rgb_2000.txt.idx  orig_rgb_2000.txt.map  orig_rgb_2000.txt.map.eps  plotting.py  rand-mat-100-10.txt  rand-mat-1000-100.txt.idx  rand-mat-1000-100.txt.map  randmat.txt  result-class.txt  result-map.txt  result-map2.txt  result-umat.txt  result.eps  result.map  result.map.eps  result.map.txt  result.map.txt.eps  result.som.map  rgbs-10-01.txt  (+29 more)
data/est_time/: est_time  est_time.cpp  est_time.py
data/rand/: randmat-class.txt  randmat-sparse-codebook.txt  randmat-sparse-umat.txt  randmat-sparse.idx  randmat.txt
data/splitdata/: master-10-3.txt  master-100-10.txt  rand-1000-100-0001.txt  rand-1000-100-0002.txt  rand-1000-100-0003.txt  rand-1000-100-0004.txt  rand-1000-100-0005.txt  rand-1000-100-0006.txt  rand-1000-100-0007.txt  rand-1000-100-0008.txt  rand-1000-100-0009.txt  rand-1000-100-0010.txt  result-map-16:45_05_11_2010.txt  result-umat-16:45_05_11_2010.txt  result.map.txt  result.umat.txt  rgbs-0001.txt  rgbs-0002.txt  rgbs-0003.txt  show2.py  test.eps  umat
data/splitdata/ranger_out/: result-umat-19:51_03_11_2010.txt
src/: .gitignore  CMakeLists.txt  memory_map.cpp  memory_map.hpp  mrsom-sparse.cpp  mrsom.cpp  mrsom.cpp.orig  mrsom.hpp  mrsom2.cpp  mrsom2.hpp  mrsom3.cpp  mrsom4.1.0.cpp  mrsom4.1.1.cpp  mrsom4.2.0.cpp  mrsom4.2.1.cpp  mrsom4.cpp  mrsom5.cpp  mrsom6.cpp  mrsom7.cpp  mrsom8.cpp  mrsom9.cpp  som.cpp  som2.cpp  txt2bin.cpp
src/backup/: mrsom.cpp  mrsom.cpp.10292010.beforeremovescatter  mrsom0713.cpp  mrsom2.cpp  mrsom3.cpp  som.cpp
src/mrmpi/: CMakeLists.txt  Makefile.mac  Makefile.mac64  Makefile.odin  Makefile.serial  cmapreduce.cpp  error.h  irregular.cpp  keymultivalue.cpp  keymultivalue.h  keyvalue.cpp  keyvalue.h  mapreduce.cpp  spool.h
src/mrmpi/mrmpi-26Aug10/: README
src/mrmpi/mrmpi-26Aug10/doc/: Manual.html  Manual.txt  add.html  add.txt  aggregate.html  aggregate.txt  background.html  background.txt  broadcast.html  broadcast.txt  clone.html  clone.txt  collapse.html  collapse.txt  collate.html  collate.txt  compress.html  compress.txt  convert.html  convert.txt  copy.html  copy.txt  create.html  create.txt  destroy.html  destroy.txt  examples.html  examples.txt  gather.html  gather.txt  interface_c++.html  interface_c++.txt  interface_c.html  interface_c.txt  interface_python.html  interface_python.txt  kv_add.html  kv_add.txt  map.html  map.txt  (+26 more)
src/mrmpi/mrmpi-26Aug10/examples/: Makefile.common  Makefile.mac64  crmat.c  cwordfreq.c  rmat.cpp  rmat.py  rmat2.cpp  wordfreq.cpp  wordfreq.py
src/mrmpi/mrmpi-26Aug10/mpistubs/: mpi.cpp  mpi.h
src/mrmpi/mrmpi-26Aug10/python/: mrmpi.py  setup.py  setup_serial.py
src/mrmpi/mrmpi-26Aug10/src/: Makefile.linux  cmapreduce.cpp  cmapreduce.h  error.cpp  error.h  irregular.cpp  irregular.h  keymultivalue.cpp  keymultivalue.h  keyvalue.cpp  keyvalue.h  mapreduce.cpp  mapreduce.h  memory.cpp  memory.h  spool.cpp  spool.h
src/mrmpi/mrmpi-26Aug10/user/: README
src/mrmpi/old/: CMakeLists.txt  Makefile.common  Makefile.debug  Makefile.linux  Makefile.mpicc  cmapreduce.h  error.cpp  hash.cpp  irregular.h  keymultivalue.cpp  keyvalue.cpp  mapreduce.cpp  mapreduce.h  memory.cpp  memory.h  spool.cpp
src/orig/: mrsom.cpp.orig  som.cpp.orig
src/py/: getoffsets.py  mrsom2.py  som.py
src/py/old/: mrsom.py
src/txt2bin/: CMakeLists.txt  txt2bin-sparse.cpp  txt2bin.cpp
test/: a.out  getline.py  getoffsets.py  index_test.sh  make_index_test_infile.py  matrix_bcast.c  memmapped_ex.cpp  pypar_test.sh  qerror  rand-mat-10-3.txt  rand-mat-100-3.txt  vcal
test/binfile/: a.out  test.cpp  test.cpp.orig  test2  test2.cpp.orig
test/boost/lamda/: example
test/boost/memorymapped/: Makefile  memory_map  memory_map.hpp  test.cpp  test.cpp.orig  test2
test/boost/sharedmem/: cli  cli.cpp  ser  ser.cpp  sm_cli.cpp  sm_ser.cpp
test/mpireduce/: test.c  test2.c
tools/: qerror  som_pak  som_pak-3.1.tar  txt2bin  umat  vcal  visual  vsom
tools/som_pak-3.1/: README  VERSION  datafile.c  datafile.h  fileio.c  fileio.h  header.ps  lvq_pak.c  lvq_pak.h  makefile.dos  makefile.unix  mapinit.c  planes  planes.c  qerror  qerror.c  randinit  sammon  sammon.c  som_rout.c  umat.c  umat.h  vcal  vcal.c  vfind  vfind.c  visual  visual.c  vsom  vsom.c
