include_directories(${MRSOM_SOURCE_DIR}/mrmpi)
link_directories(${MRSOM_BINARY_DIR}/mrmpi)
LINK_DIRECTORIES(${LINK_DIRECTORIES} ${MRSOM_BINARY_DIR}/mrmpi)

add_executable(mrsom mrsom.cpp)
target_link_libraries(mrsom mpi)  
target_link_libraries(mrsom mrmpi)
target_link_libraries(mrsom boost_iostreams)
target_link_libraries(mrsom boost_filesystem)
target_link_libraries(mrsom boost_program_options)
# For Ranger
#target_link_libraries(mrsom9 boost_iostreams-gcc44-mt)
#target_link_libraries(mrsom9 boost_filesystem-gcc44-mt)
#target_link_libraries(mrsom boost_program_options-gcc44-mt)

add_executable(mrsom-sparse mrsom-sparse.cpp)
target_link_libraries(mrsom-sparse mpi)  
target_link_libraries(mrsom-sparse mrmpi)
target_link_libraries(mrsom-sparse boost_iostreams)
target_link_libraries(mrsom-sparse boost_filesystem)
target_link_libraries(mrsom-sparse boost_program_options)

#set(CMAKE_BUILD_TYPE Release)
SET(CMAKE_BUILD_TYPE distribtion)
SET(CMAKE_CXX_FLAGS_DISTRIBUTION "-O3")
SET(CMAKE_C_FLAGS_DISTRIBUTION "-O3")

#SET(CMAKE_BUILD_TYPE Debug)
#SET(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
#SET(CMAKE_C_FLAGS_DEBUG -g "-O0")
